# TilesWM

./: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile_all  Doxyfile_all.in  Doxyfile_common  Doxyfile_common.in  Doxyfile_defaults  Doxyfile_defaults.in  FIXME  Makefile  README.md  _Makefile  client.cpp  client.h  client_container.cpp  client_container.h  config.mk  container.cpp  container.h  container_container.cpp  container_container.h  container_element.h  container_element_list.cpp~  container_element_list.h  list.cpp  list.h  main.cpp  make_conf  static_library.mk  ttmwm.cpp  wallpaper.png_1
backend_x11/: CMakeLists.txt  Makefile  default_config_values.cpp  x11_application.cpp  x11_application.h  x11_client.cpp  x11_client.h  x11_client_widget.cpp  x11_client_widget.h  x11_global.cpp  x11_global.h  x11_graphics_system.h  x11_graphics_system_x11.cpp  x11_icon.h  x11_key_grab_set.cpp  x11_key_grab_set.h  x11_server_widget.cpp  x11_server_widget.h  x11_shortcut_set.cpp  x11_shortcut_set.h  x11_widget.cpp  x11_widget.h  x11_widget_backend.cpp  x11_widget_backend.h
backend_x11/graphics_system/cairo/: CMakeLists.txt  x11_graphics_system_cairo.cpp  x11_graphics_system_cairo.h
backend_x11/graphics_system/common/: x11_graphics_system.h
backend_x11/graphics_system/native/: CMakeLists.txt  Makefile  x11_canvas.cpp  x11_canvas.h  x11_graphics_system_x11.cpp  x11_graphics_system_x11.h  x11_icon.cpp  x11_icon.h
backend_x11_cairo/: CMakeLists.txt  Makefile  x11_graphics_system_cairo.cpp  x11_graphics_system_cairo.h
backend_x11_common/: x11_graphics_system.h
backend_x11_native/: CMakeLists.txt  Makefile  x11_canvas.cpp
common/: CMakeLists.txt  Makefile  _Makefile  abstract_key_sequence.h  action_set.cpp  action_set.h  actions.cpp  actions.h  application.cpp  application.h  backend.h  cairo_canvas.cpp  cairo_canvas.h  cairo_icon.cpp  canvas.h  child_widget.cpp  child_widget.h  client.cpp  client.h  client_backend.h  client_container.cpp  client_container.h  client_container_layout.cpp  client_container_layout.h  client_frontend.h  client_util.cpp  client_util.h  colors.h  common.h  config.cpp  config.h  config.h.new  container.cpp  container.h  container_base.cpp  container_base.h  container_container.cpp  container_container.h  container_container_layout.cpp  container_container_layout.h  (+46 more)
common/cairo/: cairo_canvas.cpp  cairo_icon.cpp
common_cairo/: CMakeLists.txt  Makefile  cairo_canvas.cpp  cairo_icon.cpp  cairo_icon.h
frontend/: CMakeLists.txt  Makefile  _keybinding_brainstorm.h  action.h  action_run.cpp  action_run.h  action_set.cpp  action_set.h  application.cpp  application.h  child_widget.cpp  child_widget.h  client.cpp  client.h  client_container.cpp  client_wrapper.cpp  client_wrapper.h  common_actions.cpp  common_actions.h  common_complex_action.h  container.cpp  container_base.h  frontend_theme.cpp  frontend_theme.h  key_binding_set.cpp  key_binding_set.h  key_grab_handler.cpp  key_grab_handler.h  main_actions.cpp  main_actions.cpp.new  main_actions.h  main_actions.h.new  mode.h  mode_3panel.cpp  mode_default.cpp  mode_mixed.cpp  mode_mixed.h  mode_simple.cpp  mode_simple.h  monitor.cpp  (+20 more)
frontend/floating/: CMakeLists.txt  client_frame.cpp  client_frame.h  floating_theme.h  mode_simple.cpp  mode_simple.h  theme.cpp  window_manager_simple.h
frontend/tiling/: CMakeLists.txt  mode_3panel.cpp  mode_3panel.h  mode_default.cpp  window_manager_3panel.cpp  window_manager_3panel.h  window_manager_default.cpp  window_manager_default.h
frontend/tiling/container/: CMakeLists.txt  Makefile  client_container.cpp  client_container.h  client_container_layout.cpp  client_container_theme.h  container.cpp  container.h  mouse_handler.cpp  theme.cpp
frontend/tiling/container_container/: CMakeLists.txt  container_container.cpp  container_container.h  container_container_layout.cpp  container_container_theme.h  container_util.cpp  container_util.h  theme.cpp
frontend_container/: CMakeLists.txt  client_container.cpp  client_container_layout.cpp  container_layout.h  mouse_handler.cpp
frontend_container_container/: CMakeLists.txt  Makefile  container_util.cpp  theme.cpp
frontend_layout_box/: Makefile  client_container.cpp  client_container.h  client_container_theme.h  container.cpp  container.cpp.new  container.h  container.h.new  container_container.cpp  container_container.h  container_container_layout.cpp  container_container_layout.h  container_util.cpp  container_util.h.new  mouse_handler.h  theme.cpp
frontend_modes/: CMakeLists.txt  Makefile  mode_default.cpp  mode_default.h  mode_simple.cpp  window_manager_default.cpp  window_manager_default.cpp.new  window_manager_default.h  window_manager_simple.h
tests/: CMakeLists.txt  Makefile  misc.cpp  x11_backend_test.cpp
themes/: CMakeLists.txt
themes/default/: CMakeLists.txt  default_theme.cpp  default_theme.h
x11/: Makefile  _Makefile  default_config_values.cpp  default_config_values.h  main.cpp  x11_application.cpp  x11_application.h  x11_cairo_canvas.h  x11_canvas.cpp  x11_canvas.h  x11_client.cpp  x11_client.h  x11_client_container.cpp  x11_client_container.h  x11_client_widget.cpp  x11_client_widget.h  x11_container_container.cpp  x11_container_container.h  x11_container_widget.cpp  x11_container_widget.h  x11_default_key_bindings.cpp  x11_default_key_bindings.h  x11_default_key_handler.cpp  x11_default_key_handler.h  x11_global.cpp  x11_global.h  x11_graphics_system.h  x11_graphics_system_cairo.cpp  x11_graphics_system_cairo.h  x11_graphics_system_x11.cpp  x11_graphics_system_x11.h  x11_icon.cpp  x11_icon.h  x11_key_handler.cpp  x11_key_handler.h  x11_server_widget.cpp  x11_server_widget.h  x11_shortcut.cpp  x11_shortcut.h  x11_shortcut_set.cpp  (+5 more)
x11/examples/: xgeticon.c
