include_directories (${CMAKE_CURRENT_SOURCE_DIR})

add_subdirectory (tiling)
add_subdirectory (floating)

set (SRCS ${SRCS} monitor)
set (SRCS ${SRCS} widget)
set (SRCS ${SRCS} child_widget)
set (SRCS ${SRCS} status_bar)
set (SRCS ${SRCS} workspace)
set (SRCS ${SRCS} client)
set (SRCS ${SRCS} client_wrapper)
set (SRCS ${SRCS} action_set)
set (SRCS ${SRCS} action_run)
set (SRCS ${SRCS} application)
set (SRCS ${SRCS} key_grab_handler)
set (SRCS ${SRCS} key_binding_set)
set (SRCS ${SRCS} theme)
set (SRCS ${SRCS} common_actions)
set (SRCS ${SRCS} widget_util)
# set (SRCS ${SRCS} mode_mixed)
# set (SRCS ${SRCS} window_manager_mixed)

add_library (frontend ${SRCS})
